err/clsearch.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/clsearch'...
Compiling './lib/python3.5/site-packages/clsearch/base.py'...
***   File "./lib/python3.5/site-packages/clsearch/base.py", line 101
    split_string = ur''
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/clsearch/index.py'...
***   File "./lib/python3.5/site-packages/clsearch/index.py", line 38
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/clsearch/search.py'...
***   File "./lib/python3.5/site-packages/clsearch/search.py", line 106
    print "\nTag Results:\n"
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/clsearch/test'...
Compiling './lib/python3.5/site-packages/clsearch/test/test_base.py'...
***   File "./lib/python3.5/site-packages/clsearch/test/test_base.py", line 48
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xf3 in position 0: unexpected end of data

Listing './lib/python3.5/site-packages/clsearch-0.1a1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
